--- a/frontend/src/app/components/task-view/task-view.component.html
+++ b/frontend/src/app/components/task-view/task-view.component.html
@@ -2,26 +2,33 @@
     <div class="card task-card">
         <div class="card-body p-4">
             <!-- TODO: add ngForm --> 
-            <form class="form" id="new-task-form">
-                <input type="text" name="new-task-title" placeholder="New Task Title" class="form-control m-2"/>
+            <form class="form" id="new-task-form" (ngSubmit)="onSubmit()">
+                <input type="text" name="new-task-title" placeholder="New Task Title" class="form-control m-2" [formControl]="title"/>
 
-                <textarea  name="new-task-description" placeholder="Description" class="form-control m-2"></textarea> 
+                <textarea  name="new-task-description" placeholder="Description" class="form-control m-2" [formControl]="description"></textarea> 
 
-                <button type="submit" name="saveBtn" class="btn btn-sm btn-outline-dark form-control m-2">Save</button>
+                <button type="submit" name="saveBtn" class="btn btn-sm btn-outline-dark form-control m-2" >Add child to {{ selectedTaskId }}</button>
             </form>
 
         </div>
 
     </div>
 
-    <app-task [task]="currentTask"></app-task>
+    <h3>Latest task:</h3>
+
+    <div class="d-inline-flex">
+        <app-task [task]="currentTask" (click)="onTaskSelected(currentTask)" [ngClass]="currentTask.taskId == selectedTaskId ? 'selectedTask': ''"></app-task>
+    </div>
+
+    <h3>Related tasks:</h3>
     <div class="d-inline-flex">
         <app-task *ngFor="let sisterTask of siblings" [task]="sisterTask" (click)="onTaskSelected(sisterTask)" [ngClass]="sisterTask.taskId == selectedTaskId ? 'selectedTask': ''" class=""></app-task>
     </div>
 
-    <app-task [task]="parentTask" (click)="onTaskSelected(parentTask)" [ngClass]="parentTask.taskId == selectedTaskId ? 'selectedTask' : ''" class='d-flex'>
-        
-    </app-task>
+    <h3>Parent task:</h3>
+    <div class="d-flex">
+        <app-task [task]="parentTask" (click)="onTaskSelected(parentTask)" [ngClass]="parentTask.taskId == selectedTaskId ? 'selectedTask' : ''"></app-task>
+    </div>
 
 
 </div>
